1141121第一次個人專題報告後依老師建議調整

--- a/activity.html
+++ b/activity.html
@@ -169,9 +169,9 @@
                         <span class="h1-eg-medium">Activity</span>
                         <h1 class="h1-ch">活動總覽</h1>
                         <div class="bread">
-                            <span><a href="index.html">首頁</a></span>
-                            <span>></span>
-                            <span><a href="#">活動總覽</a></span>
+                            <span class="green p2"><a href="index.html">首頁</a></span>
+                            <span class="p2">></span>
+                            <span class="green p2">活動總覽</span>
                         </div>
                     </div>
                     <div class="col-4">
@@ -193,10 +193,10 @@
                     <div class="col-12">
                         <div class="btn-group line green reveal-right">
                             <ul>
-                                <li class="active"><a href="#">全部</a></li>
-                                <li><a href="#">兒童與青少年</a></li>
-                                <li><a href="#">研究與進修</a></li>
-                                <li><a href="#">樂齡學習</a></li>
+                                <li class="active"><button class="btn-sm">全部</button></li>
+                                <li><button class="btn-sm">兒童與青少年</button></li>
+                                <li><button class="btn-sm">研究與進修</button></li>
+                                <li><button class="btn-sm">樂齡學習</button></li>
                             </ul>
                         </div>
                     </div>
