--- a/contact.html
+++ b/contact.html
@@ -170,9 +170,9 @@
                         <span class="h1-eg-medium">Contact Us</span>
                         <h1 class="h1-ch">聯絡我們</h1>
                         <div class="bread">
-                            <span><a href="index.html">首頁</a></span>
-                            <span>></span>
-                            <span><a href="#">聯絡我們</a></span>
+                            <span class="green p2"><a href="index.html">首頁</a></span>
+                            <span class="p2">></span>
+                            <span class="green p2">聯絡我們</span>
                         </div>
                     </div>
                 </div>
