--- a/modal.html
+++ b/modal.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!-- 會員登入/註冊視窗 -->
-    <!-- <section id="modal-overlay" class="account modalHidden">
+    <section id="account" class="account modal-overlay">
         <div class="container">
-            <div id="modal-content"  class="row">
+            <div class="modal-content row">
                 <div class="close-btn">
                     <span></span>
                     <span></span>
@@ -58,9 +58,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- 導覽服務 -->
-    <section id="tour-guide" class="modal-overlay tour-guide">
+    <!-- <section id="tour-guide" class="modal-overlay tour-guide">
         <div class="container">
             <div class="modal-content row">
                 <div class="close-btn">
@@ -123,12 +123,11 @@
                 <img src="./images/pop-up-window/tour-guide.png" alt="tour-guide">
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
-    <script src="javascript/font-size-switch.js"></script>
     <script src="javascript/script.js"></script>
 </body>
 </html>
