--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><a href="contact.html">聯絡我們</a></li>
                     </ul>
                     <div class="btn-group">
-                        <a href="#" class="little-btn yellow" id="tour-guide-btn">導覽服務</a>
+                        <a href="#" class="little-btn yellow tour-guide-btn">導覽服務</a>
                         <a href="#"class="little-btn green" id="account-btn"><span class="material-symbols-outlined">login</span>我的帳戶</a>
                     </div>
                 </div>
@@ -45,9 +45,9 @@
         <section class="hero">
             <div class="search-bar reveal-item">
                 <div class="tab-btns">
-                    <button href="#" class="tab-btn active">館藏查詢</button>
-                    <button href="#" class="tab-btn">資源整合查詢</button>
-                    <button href="#" class="tab-btn">電子期刊</button>
+                    <button class="tab-btn active p2">館藏查詢</button>
+                    <button class="tab-btn p2">資源整合查詢</button>
+                    <button class="tab-btn p2">電子期刊</button>
                 </div>
                 <div class="search-box">
                     <input type="text" placeholder="請輸入關鍵字">
@@ -278,12 +278,12 @@
                     <div class="col-10 news-list reveal-right">
                         <div class="btn-group green">
                             <ul>
-                                <li class="active"><a href="#">全部</a></li>
-                                <li><a href="#">新聞稿</a></li>
-                                <li><a href="#">公告</a></li>
-                                <li><a href="#">各館花絮</a></li>
-                                <li><a href="#">藝文活動</a></li>
-                                <li><a href="#">未分類</a></li>
+                                <li class="active"><button class="btn-sm">全部</button></li>
+                                <li><button class="btn-sm">新聞稿</button></li>
+                                <li><button class="btn-sm">公告</button></li>
+                                <li><button class="btn-sm">各館花絮</button></li>
+                                <li><button class="btn-sm">藝文活動</button></li>
+                                <li><button class="btn-sm">未分類</button></li>
                             </ul>
                         </div>
                         <div class="news-item">
@@ -292,7 +292,7 @@
                                 <p class="strong-number-sm-blod">10.28<span class="p2">二</span></p>
                             </div>
                             <div class="news-title">
-                                <p class="paragraphs1">【綜合活動】114年圖書館滿意度調查填問卷抽好禮活動上線囉!</p>
+                                <p class="p1">【綜合活動】114年圖書館滿意度調查填問卷抽好禮活動上線囉!</p>
                                 <span class="material-symbols-outlined">arrow_right_alt</span>
                             </div>
                         </div>
@@ -302,7 +302,7 @@
                                 <p class="strong-number-sm-blod">10.28<span class="p2">二</span></p>
                             </div>
                             <div class="news-title">
-                                <p class="paragraphs1">114年新竹縣閱讀節活動開跑! 11/1-12/20，閱讀方程式，邀請您一起成為一級玩家!</p>
+                                <p class="p1">114年新竹縣閱讀節活動開跑! 11/1-12/20，閱讀方程式，邀請您一起成為一級玩家!</p>
                                 <span class="material-symbols-outlined">arrow_right_alt</span>
                             </div>
                         </div>
@@ -312,17 +312,17 @@
                                 <p class="strong-number-sm-blod">10.26<span class="p2">日</span></p>
                             </div>
                             <div class="news-title">
-                                <p class="paragraphs1">【綜合活動】114年11月份爹地媽咪說故事活動來囉！</p>
+                                <p class="p1">【綜合活動】114年11月份爹地媽咪說故事活動來囉！</p>
                                 <span class="material-symbols-outlined">arrow_right_alt</span>
                             </div>
                         </div>
                         <div class="news-item">
                             <div class="date">
-                                <p>2025</p>
+                                <p class="p2">2025</p>
                                 <p class="strong-number-sm-blod">10.23<span class="p2">四</span></p>
                             </div>
                             <div class="news-title">
-                                <p class="paragraphs1">【芎林館活動】萬聖節搞什麼鬼~不給糖就借書，114年10月26日(星期日)-10月31日，歡迎小朋友及親子家庭一起來參加。</p>
+                                <p class="p1">【芎林館活動】萬聖節搞什麼鬼~不給糖就借書，114年10月26日(星期日)-10月31日，歡迎小朋友及親子家庭一起來參加。</p>
                                 <span class="material-symbols-outlined">arrow_right_alt</span>
                             </div>
                         </div>
@@ -332,7 +332,7 @@
                                 <p class="strong-number-sm-blod">10.17<span class="p2">五</span></p>
                             </div>
                             <div class="news-title">
-                                <p class="paragraphs1">【轉知】：文化部115年度「推動實體書店發展補助作業」收件資訊相關事宜</p>
+                                <p class="p1">【轉知】：文化部115年度「推動實體書店發展補助作業」收件資訊相關事宜</p>
                                 <span class="material-symbols-outlined">arrow_right_alt</span>
                             </div>
                         </div>
@@ -359,47 +359,55 @@
                 </div>
                 <div class="row">
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks01.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks01.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span class="p2">加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="低成本生活 : 不用努力工作, 生活依然從容不迫!">低成本生活 : 不用努力工作, 生活依然從容不迫!</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks02.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks02.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">日本小說</div>
-                            <div class="bookname paragraphs1">罪惡的終結</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">日本小說</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span class="p2">加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="罪惡的終結">罪惡的終結</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks03.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks03.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">慢慢活成自己喜歡的樣子 : 走過十大自我洞察階段...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span class="p2">加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生">慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks04.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks04.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">日本小說</div>
-                            <div class="bookname paragraphs1">魔女的原罪</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">日本小說</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span class="p2">加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="魔女的原罪">魔女的原罪</p></a>
                         </div>
                     </div>
                     <div class="col-12">
