--- a/newbooks.html
+++ b/newbooks.html
@@ -168,183 +168,201 @@
                         <span class="h1-eg-medium">New Books</span>
                         <h1 class="h1-ch">最新書籍</h1>
                         <div class="bread">
-                            <span><a href="index.html">首頁</a></span>
-                            <span>></span>
-                            <span><a href="#">最新書籍</a></span>
+                            <span class="green p2"><a href="index.html">首頁</a></span>
+                            <span class="p2">></span>
+                            <span class="green p2">最新書籍</span>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">10月新書</h5>
                             <div class="line"></div>
-                            <p class="paragraphs2">114年10月一般新書上架，歡迎至本館1樓大廳右側新書展示區賞書。<br>展示期間2025-09-30 ~ 2025-10-27<br>暫停外借 2025-09-30 ~2025-10-27</p>
+                            <p class="p2">114年10月一般新書上架，歡迎至本館1樓大廳右側新書展示區賞書。<br>展示期間2025-09-30 ~ 2025-10-27<br>暫停外借 2025-09-30 ~2025-10-27</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <img src="images/bg/newbooks-bg1.png" alt="newbooks-bg1" class="newbooks-bg1">
-        <div class="font-scale">
-            <p>字體</p>
-            <button class="p1" data-size="small">小</button>
-            <button class="p1 active" data-size="medium">中</button>
-            <button class="p1" data-size="large">大</button>
-        </div>
     </header>
     <main>
         <section class="newbooks-list">
-            
             <div class="container">
                 <div class="row">
                     <div class="col-12 btn-group line green reveal-right">
                         <ul>
-                            <li class="active"><a href="">全部</a></li>
-                            <li><a href="">百科全書與雜誌</a></li>
-                            <li><a href="">哲學類</a></li>
-                            <li><a href="">宗教類</a></li>
-                            <li><a href="">科學類</a></li>
-                            <li><a href="">應用科學類</a></li>
-                            <li><a href="">社會科學類</a></li>
-                            <li><a href="">史地類</a></li>
-                            <li><a href="">語言文學類</a></li>
+                            <li class="active"><button class="btn-sm">全部</button></li>
+                            <li><button class="btn-sm">百科全書與雜誌</button></li>
+                            <li><button class="btn-sm">哲學類</button></li>
+                            <li><button class="btn-sm">宗教類</button></li>
+                            <li><button class="btn-sm">科學類</button></li>
+                            <li><button class="btn-sm">應用科學類</button></li>
+                            <li><button class="btn-sm">社會科學類</button></li>
+                            <li><button class="btn-sm">史地類</button></li>
+                            <li><button class="btn-sm">語言文學類</button></li>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks01.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks01.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">低成本生活 : 不用努力工作, 生活依然從容不迫!</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="低成本生活 : 不用努力工作, 生活依然從容不迫!">低成本生活 : 不用努力工作, 生活依然從容不迫!</p></a>
+                            
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks02.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks02.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">日本小說</div>
-                            <div class="bookname paragraphs1">罪惡的終結</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">日本小說</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="罪惡的終結">罪惡的終結</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks03.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks03.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">慢慢活成自己喜歡的樣子 : 走過十大自我洞察階段...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生">慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks04.png" alt="newbooks01">
+                        <a href=""><img src="images/newbooks/newbooks04.png" alt="newbooks01"></a>
                         <div class="detail">
-                            <div class="tag p2">日本小說</div>
-                            <div class="bookname paragraphs1">魔女的原罪</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks05.png" alt="newbooks05">
-                        <div class="detail">
-                            <div class="tag p2">漫畫</div>
-                            <div class="bookname paragraphs1">沒有星星的夜晚, 歡迎來到星屑咖啡館</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks06.png" alt="newbooks06">
-                        <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">中年不憂鬱</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks07.png" alt="newbooks07">
-                        <div class="detail">
-                            <div class="tag p2">心理學</div>
-                            <div class="bookname paragraphs1">戀愛腦依戀障礙 : 如何既享受粉紅泡泡, 又能尋得...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks08.png" alt="newbooks08">
-                        <div class="detail">
-                            <div class="tag p2">人生哲學</div>
-                            <div class="bookname paragraphs1">人生最後一堂理財課 : 關於金錢、工作和幸福人生...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">日本小說</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="魔女的原罪">魔女的原罪</p></a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks09.png" alt="newbooks09">
+                        <a href=""><img src="images/newbooks/newbooks05.png" alt="newbooks05"></a>
                         <div class="detail">
-                            <div class="tag p2">生活指導</div>
-                            <div class="bookname paragraphs1">學會從容, 人生不慌不忙 : 擺脫內耗, 活出人生的鬆...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">漫畫</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="沒有星星的夜晚, 歡迎來到星屑咖啡館">沒有星星的夜晚, 歡迎來到星屑咖啡館</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks10.png" alt="newbooks10">
+                        <a href=""><img src="images/newbooks/newbooks06.png" alt="newbooks06"></a>
                         <div class="detail">
-                            <div class="tag p2">韓國小說</div>
-                            <div class="bookname paragraphs1">遺憾電話亭</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="中年不憂鬱">中年不憂鬱</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks11.png" alt="newbooks11">
+                        <a href=""><img src="images/newbooks/newbooks07.png" alt="newbooks07"></a>
                         <div class="detail">
-                            <div class="tag p2">人生哲學</div>
-                            <div class="bookname paragraphs1">易經 : 史上最強職場解答之書 : 64個洞悉工作、財富...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">心理學</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="戀愛腦依戀障礙：如何既享受粉紅泡泡，又能尋得理想伴侶？">戀愛腦依戀障礙：如何既享受粉紅泡泡，又能尋得理想伴侶？</p></a>
                         </div>
                     </div>
                     <div class="col-3 books-list reveal-item">
-                        <img src="images/newbooks/newbooks12.png" alt="newbooks12">
+                        <a href=""><img src="images/newbooks/newbooks08.png" alt="newbooks08"></a>
                         <div class="detail">
-                            <div class="tag p2">藝術史</div>
-                            <div class="bookname paragraphs1">藝術初登場 : 史上第一次!30個藝術史上的開創時刻, 改變...</div>
-                            <a class="little-btn collect">
-                                <i class="fa-solid fa-heart"></i>
-                                加入收藏
-                            </a>
+                            <div class="green-tag">
+                                <p class="p2">人生哲學</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1" title="人生最後一堂理財課：見證過無數生死的安寧照護醫生告訴你如何過一個不留遺憾的人生。關於金錢、工作和幸福人生的實用建議。">人生最後一堂理財課：見證過無數生死的安寧照護醫生告訴你如何過一個不留遺憾的人生。關於金錢、工作和幸福人生的實用建議。</p></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3 books-list reveal-item">
+                        <a href=""><img src="images/newbooks/newbooks09.png" alt="newbooks09"></a>
+                        <div class="detail">
+                            <div class="green-tag">
+                                <p class="p2">生活指導</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1">學會從容，人生不慌不忙：擺脫內耗，活出人生的鬆弛感</p></a>
+                        </div>
+                    </div>
+                    <div class="col-3 books-list reveal-item">
+                        <a href=""><img src="images/newbooks/newbooks10.png" alt="newbooks10"></a>
+                        <div class="detail">
+                            <div class="green-tag">
+                                <p class="p2">韓國小說</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1">遺憾電話亭</p></a>
+                        </div>
+                    </div>
+                    <div class="col-3 books-list reveal-item">
+                        <a href=""><img src="images/newbooks/newbooks11.png" alt="newbooks11"></a>
+                        <div class="detail">
+                            <div class="green-tag">
+                                <p class="p2">人生哲學</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1">易經——史上最強職場解答之書：64個洞悉工作、財富、交際、身心健康的人生智慧法則</p></a>
+                        </div>
+                    </div>
+                    <div class="col-3 books-list reveal-item">
+                        <a href=""><img src="images/newbooks/newbooks12.png" alt="newbooks12"></a>
+                        <div class="detail">
+                            <div class="green-tag">
+                                <p class="p2">藝術史</p>
+                                <button class="collect">
+                                    <i class="fa-solid fa-heart"></i>
+                                    <span>加入收藏</span>
+                                </button>
+                            </div>
+                            <a href=""><p class="bookname p1">藝術初登場：史上第一次！30個藝術史上的開創時刻，改變我們看世界的方式</p></a>
                         </div>
                     </div>
                 </div>
