--- a/books-detail.html
+++ b/books-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>活動總覽 | 公共圖書館</title>
+    <title>書目詳細資料頁 | 公共圖書館</title>
     <link rel="stylesheet" href="style/style.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="images/library-logo.png" alt="公共圖書館"></a>
                 </div>
-                <div class="page-btn">
+                <div class="nav-btn">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li><a href="about.html">關於圖書館</a></li>
@@ -34,14 +34,19 @@
                         <li><a href="contact.html">聯絡我們</a></li>
                     </ul>
                     <div class="btn-group">
-                        <a href="#" class="little-btn yellow" id="tour-guide-btn">導覽服務</a>
+                        <a href="#" class="little-btn yellow tour-guide-btn">導覽服務</a>
                         <a href="#"class="little-btn green" id="account-btn"><span class="material-symbols-outlined">login</span>我的帳戶</a>
+                    </div>
+                    <div class="hb">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
         </nav><!-- 字體縮放按鈕 -->
         <div class="font-scale">
-            <p>字體</p>
+            <div><span class="material-symbols-outlined">text_fields</span><p class="p2">字體</p></div>
             <button class="p1" data-size="small">小</button>
             <button class="p1 active" data-size="medium">中</button>
             <button class="p1" data-size="large">大</button>
@@ -286,7 +291,7 @@
                                     <img src="images/books/books02.png" alt="books02">
                                     <div class="detail">
                                         <div class="green-tag">
-                                            <p class="p2">生活指導</p>
+                                            <p class="p2">網頁設計</p>
                                             <button class="collect">
                                                 <i class="fa-solid fa-heart"></i>
                                                 <span>加入收藏</span>
@@ -299,7 +304,7 @@
                                     <img src="images/books/books03.png" alt="books03">
                                     <div class="detail">
                                         <div class="green-tag">
-                                            <p class="p2">生活指導</p>
+                                            <p class="p2">網頁設計</p>
                                             <button class="collect">
                                                 <i class="fa-solid fa-heart"></i>
                                                 <span>加入收藏</span>
@@ -312,7 +317,7 @@
                                     <img src="images/books/books04.png" alt="books04">
                                     <div class="detail">
                                         <div class="green-tag">
-                                            <p class="p2">生活指導</p>
+                                            <p class="p2">網頁設計</p>
                                             <button class="collect">
                                                 <i class="fa-solid fa-heart"></i>
                                                 <span>加入收藏</span>
@@ -339,8 +344,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-9">
-                    
+                <div class="col-lg-12 col-9">
                     <div class="nav-list">
                         <img src="images/library-logo-white.png" alt="公共圖書館">
                         <ul class="btn-sm">
@@ -353,12 +357,30 @@
                         </ul>
                     </div>
                     <div class="tour-guide-group">
-                        <a href="student.html" class="big-btn light pink btn-mid">兒童與青少年專區<span class="material-symbols-outlined">arrow_right_alt</span></a>
-                        <a href="advanced-course.html" class="big-btn light orange btn-mid">研究與進修專區<span class="material-symbols-outlined">arrow_right_alt</span></a>
-                        <a href="senior.html" class="big-btn light purple btn-mid">樂齡學習專區<span class="material-symbols-outlined">arrow_right_alt</span></a>
+                        <a href="student.html" class="big-btn light pink btn-mid">兒童與青少年專區<span
+                                class="material-symbols-outlined">arrow_right_alt</span></a>
+                        <a href="advanced-course.html" class="big-btn light orange btn-mid">研究與進修專區<span
+                                class="material-symbols-outlined">arrow_right_alt</span></a>
+                        <a href="senior.html" class="big-btn light purple btn-mid">樂齡學習專區<span
+                                class="material-symbols-outlined">arrow_right_alt</span></a>
+                    </div>
+                    <!-- rwd手機板 -->
+                    <div class="tour-guide-group-w440">
+                        <a href="student.html" class="big-btn light pink btn-mid">
+                            <span class="material-symbols-outlined">menu_book</span>
+                            兒童與青少年<br>專區
+                        </a>
+                        <a href="advanced-course.html" class="big-btn light orange btn-mid">
+                            <span class="material-symbols-outlined">flag</span>
+                            研究與進修<br>專區
+                        </a>
+                        <a href="senior.html" class="big-btn light purple btn-mid">
+                            <span class="material-symbols-outlined">person_play</span>
+                            樂齡學習<br>專區
+                        </a>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-12 col-3">
                     <div class="info">
                         <p class="p2">公共圖書館</p>
                         <p class="p2">通訊地址：新竹縣竹北市智惠街888號</p>
@@ -366,7 +388,13 @@
                         <p class="p2">更新日期：2025.10.22</p>
                     </div>
                 </div>
-                <p class="source">參考資料來源: 博客來: http://xn--books-9c3ht2uuqs.com.tw/?srsltid=AfmBOoq2Y_y7kdHy_gMNaupda3pu3Lo6NsjaiSWDwKtxbmgR8aTGuEtt | Pinterest:https://www.pinterest.com/ | 新竹縣公共圖書館官網: https://hcplibrary.hchcc.gov.tw/wSite/mp?mp=1</p>
+                <div class="col-12 source">
+                    <p>參考資料來源: 博客來:
+                        http://xn--books-9c3ht2uuqs.com.tw/?srsltid=AfmBOoq2Y_y7kdHy_gMNaupda3pu3Lo6NsjaiSWDwKtxbmgR8aTGuEtt
+                        | Pinterest:https://www.pinterest.com/ | 新竹縣公共圖書館官網: https://hcplibrary.hchcc.gov.tw/wSite/mp?mp=1
+                    </p>
+                </div>
+                
             </div>
         </div>
     </footer>
